--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@tanstack/react-query": "^4.17.1",
+    "@tanstack/react-query-devtools": "^4.17.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.2.3",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
