--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^4.17.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "crypto-js": "^4.1.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,10 +25,12 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "short-uuid": "^4.2.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.2.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
