--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "crypto-js": "^4.1.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
@@ -33,7 +35,9 @@
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.6",
+    "@types/react-highlight-words": "^0.16.4",
     "autoprefixer": "^10.4.13",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
