--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
